--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://www.github.com/jguix/Cordova-Flic"
+    "url": "https://github.com/GeorgeD19/Cordova-Flic"
   },
   "keywords": [
     "cordova",
